@@ -17,6 +17,10 @@
 |===
 | | Description | PR
 
+| 🐣
+| Improve error handling in clients
+| https://github.com/knative/client/pull/1154[#1154]
+
 | 🎁
 | Add machine readable output (-o flag) to kn source ping describe
 | https://github.com/knative/client/pull/1150[#1150]
